<resources>
    <string name="app_name">Bail Company</string>
    <string name="app_id">1197871810239050</string>
    <string name="call">Call</string>
    <string name="txt_progress">Processing, Please Wait&#8230;</string>
    <string name="err_fb_login">Facebook login failed due to following reason:\n</string>
    <string name="alert_wait">Please wait...</string>
    <string name="sender">Sender</string>
    <string name="reciever">Receiver</string>
    <string name="accept">Accept</string>
    <string name="chat">Chat</string>
    <string name="add">Add New Bad Debt Member</string>
    <string name="search">Search</string>
    <string name="try_again">Try again</string>
    <string name="alert_loading">Loading...</string>
    <string name="cmplte_frm">Completion Form</string>
    <string name="msg_fb_login">Logged in to Facebook successfully.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="signin">Sign In</string>
    <string name="apply">Apply</string>
    <string name="subscribe">Subscriber</string>
    <string name="package2">Welcome</string>
    <string name="attach_req">Attach The Required Documents To Complete Form</string>
    <string name="attach_doc_size">Total Attachments Size: 0.00 KB</string>
    <string name="entr_pwr">Enter Power Number</string>
    <string name="def_and_co">Defendant and Co-Signer Picture</string>
    <string name="co">Co-signer</string>
    <string name="photo_of">Photo Of Body Receipt And Other Documents</string>
    <string name="status">Status</string>
    <string name="wrt_comment">Write your comments</string>
    <string name="def">Defendant</string>
    <string name="package_detail">Subscription Packages</string>
    <string name="package_txt">The dispatching feature "GET AN AGENT" , whether you dispatch your own our Inst-Bail agents,is free to access.There is a.99 cent per dispatch transaction.So PAY AS USE!\nThe aditional feature of TRANSFER BOND,REFER BAIL,BLACK LIST BAD DEBT,FUGITIVE RECOVERY and HISTORY has fee of $20.00 per month to access</string>
    <string name="hire2">Hire</string>
    <string name="plan">Do you plan on dispatching more than 50 times per month?</string>
    <string name="signin_fb">Sign In with facebook</string>
    <string name="signup_fb">Signup with facebook</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="sub2">Subscription</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="defendent">Defendant Or Cosigner</string>
    <string name="amount_owed">AmountOwed </string>
    <string name="amount_forfeited">Amount Forfeited </string>
    <string name="signin_login">Sign In</string>
    <string name="forgot">Forgot Password?</string>
    <string name="forgot_title">Forgot Password</string>
    <string name="or">Or</string>
    <string name="agent_bid">Bid Amount</string>
    <string name="complete">Complete</string>
    <string name="abort">Abort</string>
    <string name="msg">Type a message</string>
    <string name="cancel">Cancel</string>
    <string name="decline">Decline</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="insurance">Insurances</string>
    <string name="insurance2">Insurance</string>
    <string name="Amnt_percent">Amount or Percentage company will to pay</string>
    <string name="bail_company">Bail Company</string>
    <string name="cname">Company Name</string>
    <string name="addr">Address :</string>
    <string name="date_format">00/00/00 00/00 am</string>
    <string name="addr_normal">Address</string>
    <string name="town">Town</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip Code</string>
    <string name="phone">Phone number</string>
    <string name="agency_license">Agency License Number</string>
    <string name="sel_insur">Select Insurance</string>
    <string name="sel_state">Select State</string>
    <string name="sel_state_bail">States which you perform bail</string>
    <string name="next">Next</string>
    <string name="add_btn">Add</string>
    <string name="credit_detail">Credit Card Details</string>
    <string name="credit_num">Credit Card Number</string>
    <string name="account_num">Account Number</string>
    <string name="account_type">Account Type</string>
    <string name="routing_num">Routing Number</string>
    <string name="disclaimer">All fees will be deducted automatically from this card being presented. The monthle fees will be a recurring fee as the fees to pay for the agent services will be "as-requested" transactions</string>
    <string name="mm">MM</string>
    <string name="yy">YYYY</string>
    <string name="cvv">CVV</string>
    <string name="ex_date">Card Expired Date</string>
    <string name="name_on_card">Name On Card</string>
    <string name="card_type">Card Type</string>
    <string name="name_on_account">Name on Account</string>
    <string name="enter_email">Enter your email</string>
    <string name="track_hired">Track Hired Agent</string>
    <string name="show_all">Show all on map</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="get_agnt">Get An Agent</string>
    <string name="trck_agnt">Track Agents</string>
    <string name="cntct_us">Contact Us</string>
    <string name="trns_bond">Transfer Bond</string>
    <string name="ass_req">Self Assigned Transaction Detail</string>
    <string name="fugitive_agent">Fugitive Agent</string>
    <string name="sent_fugitve_req">Sent Fugitve Request</string>
    <string name="incmng_req">Incoming Request</string>
    <string name="incmng_req2">Incoming Tranfer Bond Request</string>
    <string name="logout">Logout</string>
    <string name="ag_profile">Agent Profile</string>
    <string name="available">Available</string>
    <string name="uname">Username</string>
    <string name="search2">Search by name,city or dob</string>
    <string name="p_number">Phone Number</string>
    <string name="ag_lic_st">Agent License State And Expiration Date</string>
    <string name="ag_appr">Agent Approval Status</string>
    <string name="ag_num">Agent License Number</string>
    <string name="ag_insur">Agent Insurances List</string>
    <string name="st_appli">States Applicable To Agent</string>
    <string name="ag_near">Agent Nearest Location</string>
    <string name="contact_us">Contact Us</string>
    <string name="inst_group_msg">Instant Group Messages</string>
    <string name="instant_chat">Instant Messaging</string>
    <string name="refer_bail">Refer Bail</string>
    <string name="incoming_refer_bail_request">Incoming Bail Referral Request</string>
    <string name="bad_debt_members">Bad Debt Members </string>
    <string name="black_list_members">Black List Members </string>
    <string name="history">History</string>
    <string name="defendant">Defendant</string>
    <string name="defendants">Defendants</string>
    <string name="calendar">Calendar</string>
    <string name="txt_contact">“Please feel free to Ask a Question, Note A Concern, Rate An Agent, Request A Feature or Just Say Hello”</string>
    <string name="wrte_here">Write here...</string>
    <string name="send">Send</string>
    <string name="def_name">Defendant Name</string>
    <string name="def_fname">Defendant First Name</string>
    <string name="def_lname">Defendant Last Name</string>
    <string name="indem_fname">Indemnitor First Name</string>
    <string name="indem_lname">Indemnitor Last Name</string>
    <string name="no_signer">Number of Cosigner</string>
    <string name="loc_def">Location of Defendant</string>
    <string name="street_address_def">Street Address</string>
    <string name="loc_def_lka">Location of Defendant or LKA</string>
    <string name="entr_warr">Enter Warrant</string>
    <string name="pay_in">Pay-In Method</string>
    <string name="pay_out">Pay-Out Method</string>
    <string name="entr_forfeited">Enter Forfeited Bail Amounts and Township</string>
    <string name="add_more">ADD MORE</string>
    <string name="hire3">Hire Another Agent</string>
    <string name="hire">Hire Agent</string>
    <string name="crt_filling">Court Filing Fee Needed</string>
    <string name="bail_src">Bail Source Needed</string>
    <string name="cal_agency">Call Agency</string>
    <string name="default_amount">0.00</string>
    <string name="charging_twn">Charging Township</string>
    <string name="number_ind">Number Of Indemnitors Required To Post This Bail</string>
    <string name="ind_contact">Indemnitor\'s Contact Name And Phone Number</string>
    <string name="name">Name</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="ppr_wrk">Paperwork Needed</string>
    <string name="no_ppr">     No Paperwork - Post &amp; Go</string>
    <string name="ind_ppr">Indemnitor Paperwork</string>
    <string name="def_ppr">Defendant Paperwork</string>
    <string name="pay_st">Payment Status</string>
    <string name="amnt_cosigner">Amount Cosigners have for premium</string>
    <string name="pay_ty">Payment Type</string>
    <string name="Amount_percentage">Amount or Percentage agent requested</string>
    <string name="co_sig">Amount of Co-Signors</string>
    <string name="new_defendant">New Defendant</string>
    <string name="existing_defendant">Existing Defendant</string>
    <string name="pay_alr">Payment Already Received by Company</string>
    <string name="premium">Premium</string>
    <string name="enter_here">Enter here</string>
    <string name="collateral">Collateral</string>
    <string name="pay_alr2">Amount company offers to pay for Transfer bond</string>
    <string name="pay_comm">Amount I Request as Commission</string>
    <string name="pay_alr3">Amount company offers to pay</string>
    <string name="pay_to_be3">Percentage of amount offered</string>
    <string name="pay1">Subscription Company and/or Subagent</string>
    <string name="pay2">Dispatch Company and/or Subagent</string>
    <string name="pay3">Add-On Package 1” for $7.50 mo.</string>
    <string name="pay4">Add-On Package 2” for $7.50 mo.</string>
    <string name="pay5">The Flat Fee 50 </string>
    <string name="pay6">The Flat Fee 100 </string>
    <string name="package_1">Complimentary Free Access</string>
    <string name="package_1_detail">a. We will give you full access to the application for a period of time and then you can elect to cancel your “free membership” or continue seamlessly without interruption.\nb. Once the free service period is over you will automatically be charged the $24.99 per month plus a $0.99 “Per Bond” Fee for using the Dispatch feature.\nc. The card will just be charged each month on the 1st prior to the month of service.
</string>
    <string name="package_2">Subscription + Pay Per Bond</string>
    <string name="package_3">Flat Fee Option</string>
    <string name="pay_to_be">Payment to be collected from Indemnitor</string>
    <string name="amt_to">Amount to collect</string>
    <string name="amt_to_pre">Amount for Premium</string>
    <string name="amt_of">Amount offered by company</string>
    <string name="amt_of_com">Amount for Commission</string>
    <string name="pay_plan">Payment Plan (Enter Amount and Frequency)</string>
    <string name="spcl_inst">Special Instruction To Agent</string>
    <string name="wrt_inst">Write your instruction here...</string>
    <string name="dob">Date Of Birth</string>
    <string name="socl_sec">Social Security Number</string>
    <string name="book_num">Booking Number</string>
    <string name="submit">Submit</string>
    <string name="ind_detail">Indemnitor\'s Details</string>
</resources>