<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="40dp"
        android:background="@drawable/bubble_blue"
        android:padding="10dip"
        android:text="@string/sender" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/date"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/ind_detail"
        android:src="@drawable/default_profile_image" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/date"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/ind_detail"
        android:src="@drawable/profile_pic_mask" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/message"
        android:layout_marginTop="5dp"
        android:text="@string/date_format"
        android:textSize="12sp" />

</RelativeLayout>